# djlint-hook

./: .pre-commit-hooks.yaml  pyproject.toml
hooks/: cli_command.py
